--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
         "telephone": "05 56 67 78 89"
       }
     </script>
+    <title>Nina Carducci</title>
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Portfolio Nina Carducci" />
+    <meta
+      name="twitter:description"
+      content="Portfolio de Nina Carducci, photographe située à Bordeaux."
+    />
+    <meta name="twitter:creator" content="@ninacarducci_1" />
+    <meta name="twitter:image" content="./assets/images/nina.jpg" />
+
+    <meta property="og:url" content="https://allal-23.github.io" />
+    <meta property="og:type" content="portfolio" />
+    <meta property="og:title" content="Nina Carducci" />
+    <meta
+      property="og:description"
+      content="Portfolio de Nina Carducci, photographe située à Bordeaux."
+    />
+    <meta property="og:image" content="./assets/images/nina.jpg" />
   </head>
   <body>
     <div class="top-header">
