--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.png" alt=""
+              ><img src="assets/images/instagram.png" alt="instagram"
             /></a>
           </li>
         </ul>
@@ -107,21 +107,21 @@
             <img
               src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="ryoji"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="nicholas"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="edward"
             />
           </div>
         </div>
