--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.png" />
+        <img src="./assets/images/nina.png" alt="nina" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -176,6 +176,7 @@
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+            alt="concerts aaron-paul"
           />
           <img
             data-gallery-tag="Entreprises"
@@ -186,36 +187,43 @@
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+            alt="entreprise jason"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+            alt="mariage hannah"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+            alt="portrait ade"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+            alt="mariage jakob"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+            alt="portrait nino"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+            alt="concert austin"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+            alt="entreprise mateus"
           />
         </div>
       </div>
@@ -313,7 +321,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.png" />
+          <img src="./assets/images/camera.png" alt="photo de nuit" />
         </div>
       </div>
     </div>
