--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
@@ -246,7 +246,7 @@
       <div class="container">
         <div class="service">
           <div class="service__description">
-            <h3>Shooting photo</h3>
+            <label for="shooting">Shooting photo</label>
             <p>
               Pour capturer vos moments les plus précieux et garder un souvenir
               impérissable. Je me déplace en Île-de-France pour réaliser vos
@@ -260,7 +260,7 @@
         </div>
         <div class="service">
           <div class="service__description">
-            <h3>Retouches</h3>
+            <label for="retouches">Retouches</label>
             <p>
               Vous souhaitez retoucher vos photos pour un résultat professionnel
               ? Bénéficier d’un rendu optimal pour vos publications
@@ -273,7 +273,7 @@
         </div>
         <div class="service">
           <div class="service__description">
-            <h3>Album photos</h3>
+            <label for="album">Album photos</label>
             <p>
               Partagez avec vos proches et vos clients les photos des moments
               partagés ensemble à travers un album photo personnalisé
@@ -306,11 +306,11 @@
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label>Nom</label>
+            <label for="nom">Nom</label>
             <input type="text" name="nom" id="nom" />
-            <label>Email</label>
+            <label for="email">Email</label>
             <input type="email" name="email" id="email" />
-            <label>Message</label>
+            <label for="message">Message</label>
             <textarea
               name="message"
               id="message"
