--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou.png"
+            alt="ali"
           />
           <img
             data-gallery-tag="Entreprises"
