--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.png" alt="instagram"
+              ><img src="assets/images/instagram.webP" alt="instagram"
             /></a>
           </li>
         </ul>
@@ -105,21 +105,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata.png"
+              src="./assets/images/slider/ryoji-iwata.webP"
               class="d-block w-100"
               alt="ryoji"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green.png"
+              src="./assets/images/slider/nicholas-green.webP"
               class="d-block w-100"
               alt="nicholas"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/edward-cisneros.png"
+              src="./assets/images/slider/edward-cisneros.webP"
               class="d-block w-100"
               alt="edward"
             />
@@ -147,7 +147,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.png" alt="nina" />
+        <img src="./assets/images/nina.webP" alt="nina" />
       </div>
       <div id="about-me">
         <h2 class="about-me__title">A propos de moi</h2>
@@ -175,55 +175,55 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/aaron-paul.png"
+            src="./assets/images/gallery/concerts/aaron-paul.webP"
             alt="concerts aaron-paul"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/ali-morshedlou.png"
+            src="./assets/images/gallery/entreprise/ali-morshedlou.webP"
             alt="ali"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/jason-goodman.png"
+            src="./assets/images/gallery/entreprise/jason-goodman.webP"
             alt="entreprise jason"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/hannah-busing.png"
+            src="./assets/images/gallery/mariage/hannah-busing.webP"
             alt="mariage hannah"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/ade-tunji.png"
+            src="./assets/images/gallery/portraits/ade-tunji.webP"
             alt="portrait ade"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/jakob-owens.png"
+            src="./assets/images/gallery/mariage/jakob-owens.webP"
             alt="mariage jakob"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/nino-van-prattenburg.png"
+            src="./assets/images/gallery/portraits/nino-van-prattenburg.webP"
             alt="portrait nino"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/austin-neill.png"
+            src="./assets/images/gallery/concerts/austin-neill.webP"
             alt="concert austin"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/mateus-campos-felipe.png"
+            src="./assets/images/gallery/entreprise/mateus-campos-felipe.webP"
             alt="entreprise mateus"
           />
         </div>
@@ -325,7 +325,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.png" alt="photo de nuit" />
+          <img src="./assets/images/camera.webP" alt="photo de nuit" />
         </div>
       </div>
     </div>
